--- a/mystyle.css
+++ b/mystyle.css
@@ -14,9 +14,68 @@ header {
 ul{
     float: left;
     list-style-type: none;
-
+    margin-top: 15px;
 }
 
 ul li{
     display: inline-block;
+}
+
+ul li a{
+    text-decoration: none;
+    color: #fff;
+    padding: 5px 20px;
+    border: 1px solid #fff;
+    transition: 0.6s ease;
+}
+
+ul li a:hover{
+    background-color: darkolivegreen;
+    color: #000;
+}
+
+.logo img{
+    float: left;
+    width: 30px;
+    height: auto;
+    margin-top: 10px;
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+.main{
+    max-width: 1200px;
+    /*margin: auto;*/
+}
+
+.title{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.title{
+    color: #fff;
+    font-size: 70px;
+}
+
+.button{
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.btn{
+    border: 1px solid #fff;
+    padding: 10px 30px;
+    color: #fff;
+    text-decoration: none;
+    transition: 0.6s ease;
+}
+
+.btn:hover{
+    background-color: darkolivegreen;
+    color: #000;
 }
