--- a/mystyle.css
+++ b/mystyle.css
@@ -1,3 +1,4 @@
+/*--------------------------------------------------------------------------------------------------------------------*/
 *{
     margin: 0;
     padding: 0;
@@ -5,16 +6,20 @@
 }
 
 header {
-    background-image: url(media/FrontSide.jpg);
+    background: url(media/FrontSide.jpg) no-repeat center center fixed;
     height: 100vh;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
-    background-position: center;
-}
 
+}
+/*--------------------------------------------------------------------------------------------------------------------*/
 ul{
     float: left;
     list-style-type: none;
     margin-top: 15px;
+    margin-left: 10px;
 }
 
 ul li{
@@ -23,9 +28,9 @@ ul li{
 
 ul li a{
     text-decoration: none;
-    color: #fff;
+    color: #000;
     padding: 5px 20px;
-    border: 1px solid #fff;
+    border: 1px transparent;
     transition: 0.6s ease;
 }
 
@@ -33,7 +38,7 @@ ul li a:hover{
     background-color: darkolivegreen;
     color: #000;
 }
-
+/*--------------------------------------------------------------------------------------------------------------------*/
 .logo img{
     float: left;
     width: 30px;
@@ -42,21 +47,16 @@ ul li a:hover{
     margin-right: 5px;
     margin-left: 5px;
 }
-
-.main{
-    max-width: 1200px;
-    /*margin: auto;*/
-}
-
+/*--------------------------------------------------------------------------------------------------------------------*/
 .title{
     position: absolute;
     top: 30%;
-    left: 45%;
+    left: 43%;
     transform: translate(-50%, -50%);
 }
 
 .title{
-    color: #fff;
+    color: #000;
     font-size: 20px;
 }
 
@@ -79,3 +79,16 @@ ul li a:hover{
     background-color: darkolivegreen;
     color: #000;
 }
+
+/*--------------------------------------------------------------------------------------------------------------------*/
+h1{
+    color: black;
+    font-size: 24pt;
+    font-family: "Verdana", sans-serif;
+}
+h2{
+    color: black;
+    font-size: 18pt;
+    font-family: "Verdana", sans-serif;
+}
+/*--------------------------------------------------------------------------------------------------------------------*/
