--- a/mystyle.css
+++ b/mystyle.css
@@ -28,14 +28,14 @@ ul li{
 
 ul li a{
     text-decoration: none;
-    color: #000;
+    color: #fff;
     padding: 5px 20px;
     border: 1px transparent;
     transition: 0.6s ease;
 }
 
 ul li a:hover{
-    background-color: darkolivegreen;
+    background-color: white;
     color: #000;
 }
 /*--------------------------------------------------------------------------------------------------------------------*/
