--- a/src/about.css
+++ b/src/about.css
@@ -6,7 +6,7 @@
 }
 
 html {
-    background: url(media/FrontSide.jpg) no-repeat center center fixed;
+    background: url(../media/stuhl.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -91,4 +91,10 @@ h2{
     font-family: "Verdana", sans-serif;
 }
 /*--------------------------------------------------------------------------------------------------------------------*/
-
+.text-center{
+    position: absolute;
+    color: #000;
+    top: 50%;
+    left: 20%;
+    transform: translate(-50%, -50%);
+}
