--- a/src/about.css
+++ b/src/about.css
@@ -98,3 +98,12 @@ h2{
     left: 20%;
     transform: translate(-50%, -50%);
 }
+
+.anfahrt{
+    position: relative;
+    width: 20px;
+    height: 20px;
+    top: 10px;
+    left: 10px;
+
+}
