--- a/src/about.css
+++ b/src/about.css
@@ -90,6 +90,30 @@ h2{
     font-size: 18pt;
     font-family: "Verdana", sans-serif;
 }
+h3{
+    color: black;
+    font-weight: bold;
+    font-size: 18pt;
+    font-family: "Verdana", sans-serif;
+}
+h4{
+    color: black;
+    font-weight: bold;
+    font-size: 18pt;
+    font-family: "Verdana", sans-serif;
+}
+h5{
+    color: black;
+    font-weight: bold;
+    font-size: 18pt;
+    font-family: "Verdana", sans-serif;
+}
+h6{
+    color: black;
+    font-weight: bold;
+    font-size: 18pt;
+    font-family: "Verdana", sans-serif;
+}
 /*--------------------------------------------------------------------------------------------------------------------*/
 .anfahrt{
     position: absolute;
@@ -101,4 +125,8 @@ h2{
 
 .plan {
     width: 500px;
+}
+
+#strangeId{
+    margin-top: 10px;
 }
